2005-09-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/doxygen.config.in: use __DOXYGEN__ instead of DOXYGEN to
	encapsulate documentation-only code, so we are on the safe side wrt.
	using a reserved macro name that cannot collide with an application.
	* include/assert.h: (Ditto.)
	* include/math.h: (Ditto.)
	* include/setjmp.h: (Ditto.)
	* include/stdint.h: (Ditto.)
	* include/stdio.h: (Ditto.)
	* include/stdlib.h: (Ditto.)
	* include/avr/delay.h: (Ditto.)
	* include/avr/eeprom.h: (Ditto.)
	* include/avr/interrupt.h: (Ditto.)
	* include/avr/pgmspace.h: (Ditto.)
	* include/avr/sleep.h: (Ditto.)
	* include/avr/wdt.h: (Ditto.)
	* libc/misc/itoa.S: (Ditto.)
	* libc/misc/ltoa.S: (Ditto.)
	* libc/misc/mul10.S: (Ditto.)
	* libc/misc/mulsi10.S: (Ditto.)
	* libc/misc/ultoa.S: (Ditto.)
	* libc/misc/utoa.S: (Ditto.)
	* libc/pmstring/memcpy_P.S: (Ditto.)
	* libc/pmstring/strcasecmp_P.S: (Ditto.)
	* libc/pmstring/strcat_P.S: (Ditto.)
	* libc/pmstring/strcmp_P.S: (Ditto.)
	* libc/pmstring/strcpy_P.S: (Ditto.)
	* libc/pmstring/strlcat_P.S: (Ditto.)
	* libc/pmstring/strlcpy_P.S: (Ditto.)
	* libc/pmstring/strlen_P.S: (Ditto.)
	* libc/pmstring/strncasecmp_P.S: (Ditto.)
	* libc/pmstring/strncat_P.S: (Ditto.)
	* libc/pmstring/strncmp_P.S: (Ditto.)
	* libc/pmstring/strncpy_P.S: (Ditto.)
	* libc/pmstring/strnlen_P.S: (Ditto.)
	* libc/stdlib/atoi.S: (Ditto.)
	* libc/stdlib/atol.S: (Ditto.)
	* libc/stdlib/ctype.S: (Ditto.)
	* libc/stdlib/stdlib_private.h: (Ditto.)
	* libc/string/memccpy.S: (Ditto.)
	* libc/string/memchr.S: (Ditto.)
	* libc/string/memcmp.S: (Ditto.)
	* libc/string/memcpy.S: (Ditto.)
	* libc/string/memmove.S: (Ditto.)
	* libc/string/memset.S: (Ditto.)
	* libc/string/strcasecmp.S: (Ditto.)
	* libc/string/strcat.S: (Ditto.)
	* libc/string/strchr.S: (Ditto.)
	* libc/string/strcmp.S: (Ditto.)
	* libc/string/strcpy.S: (Ditto.)
	* libc/string/strlcat.S: (Ditto.)
	* libc/string/strlcpy.S: (Ditto.)
	* libc/string/strlen.S: (Ditto.)
	* libc/string/strlwr.S: (Ditto.)